@@ -43,7 +43,6 @@ import(nabor)
 import(parallel)
 import(pracma)
 import(rgl)
-importFrom(geomorph,digit.curves)
 importFrom(igraph,V)
 importFrom(igraph,get.shortest.paths)
 importFrom(igraph,graph.data.frame)
