@@ -5,6 +5,8 @@ New features:
 * sPathQuery now has an option to request closed curves. The documentation has also been improved.
 
 Other changes:
+* mesh_segment_by_path now takes input of sPathConnect as argument (mesh.path) instead of calling that function internally. The former functionality still exists, but is being deprecated and using the old
+lms argument will result in a warning.
 * mapOnMesh now outputs target vertices as a column (named vertex). Rownames will continue working, but should not be relied on.
 * Changed the behaviour of sPathQuery - it will now fail if path.choice is not one of the valid options, instead of silently picking "any". This behaviour was properly documented, but made little sense.
 * Added unit test for sPathQuery
@@ -13,7 +15,7 @@ that while both functions will produce identical values for the PCA aligned mesh
 a biface may point left with meshAlign.PCA, and right with pcAlign).
 * proj_pt2p: Changed the name of the distance column in output to 'dist' (from -d), explicitly made output a data.frame, updated docs, and added unit tests.
 * Updated readme with links to external tools and clearer warning regarding current status.
-
+* Changed functions that rely on geomorph::digit.curves to use an old version (2015) of that function, copied into this package and made available internally as digit.curves.old. This change will have to be reverted once the bug in the current version of digit.curves is fixed.
 
 
 Lithics3D v0.4.1 (Release date: 2018-09-24)
